@@ -10,7 +10,7 @@ namespace Verdant.Tiles.Verdant.Basic.Blocks
         public override void SetStaticDefaults()
         {
             QuickTile.SetAll(this, 0, DustID.Dirt, SoundID.Dig, new Color(91, 58, 28), ModContent.ItemType<LushSoilBlock>(), "", true, false);
-            QuickTile.MergeWith(Type, TileID.Dirt, TileID.Mud, ModContent.TileType<VerdantGrassLeaves>(), ModContent.TileType<VerdantPinkPetal>(), ModContent.TileType<VerdantRedPetal>());
+            QuickTile.MergeWith(Type, TileID.Dirt, TileID.Mud, ModContent.TileType<VerdantGrassLeaves>(), ModContent.TileType<VerdantPinkPetal>(), ModContent.TileType<VerdantRedPetal>(), TileID.Glass);
         }
     }
 }
